Added the Chat rooms fuctionality fully fuctional with some bugs obviously XD && Also enchanced the UI , Cleaned the Code

--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -43,7 +43,7 @@
                         </div>
                     </form>
                     <div class="text-center mt-3">
-                        <p>Don't have an account? <a href="{% url 'accounts:login' %}">Register here</a></p>
+                        <p>Don't have an account? <a href="{% url 'accounts:register' %}">Register here</a></p>
                     </div>
                 </div>
             </div>
