--- a/match/templates/match/favorites.html
+++ b/match/templates/match/favorites.html
@@ -105,7 +105,7 @@
             <div class="col-12">
                 <div class="alert alert-info">
                     <i class="bi bi-info-circle"></i> You haven't added any favorites yet. 
-                    <a href="{% url 'match:browse' %}" class="alert-link">Browse profiles</a> to add some!
+                    <a href="{% url 'match:explore' %}" class="alert-link">Browse profiles</a> to add some!
                 </div>
             </div>
         {% endif %}
