--- a/templates/base.html
+++ b/templates/base.html
@@ -81,7 +81,7 @@
             <a class="navbar-brand" href="{% url 'landing' %}">
                 <i class="bi bi-heart-fill"></i> Dating App
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
